tests/snapshots/integration_test__tests__should_handle_divide_operator.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nout((30 / 5).fmt());\n\"#)"
---
stdout: "6\n"
stderr: ""
error: ~
exit_code: 0
