tests/snapshots/integration_test__tests__should_handle_or_operator.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nif false || true {\n  out(\"yes!\");\n};\n\"#)"
---
stdout: "yes!\n"
stderr: ""
error: ~
exit_code: 0
