tests/snapshots/integration_test__tests__should_match_empty_object_instead_of_empty_block.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var test = {};\n        out(test.fmt());\n        \"#, \"\",\n    |_| {})"
---
stdout: "{\n}\n"
stderr: ""
error: ~
exit_code: 0
