tests/snapshots/integration_test__tests__should_not_be_able_to_change_field_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var test = {\n            mut foo: \"bar\",\n        };\n\n        test.foo = 123;\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Unable to assign a value of type 'integer' to a variable of type 'string'"
exit_code: 103
