tests/snapshots/integration_test__tests__should_not_be_able_to_mutate_fields.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var test = {\n            foo: \"bar\",\n        };\n        test.foo = \"baz\";\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Unable to assign to 'test.foo' because it is not mutable"
exit_code: 103
