tests/snapshots/integration_test__tests__should_not_be_able_to_mutate_immutable_array.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n    var array = [1,2,3];\n    array.push(4);\n    \"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Instance function with name 'push' and type signature (integer) not found"
exit_code: 103
