tests/snapshots/integration_test__tests__should_not_be_able_to_pipe_to_literal.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n`command` => \"test\";\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: "Invalid operator expression Command(Command { commands: [(\"command\", [])], source: None, destination_file: None }) Arrow String(\"test\")."
    call_stack: []
exit_code: 103
